--- a/Travelplanner/index.html
+++ b/Travelplanner/index.html
@@ -46,7 +46,7 @@
 	   			 	<option value="£">£</option>
 		   			 <option value="€">€</option>
   				</select>
-			<button type="button" class="btn btn-info mx-auto m-2" id="sendButton" name="submit">Skicka</button>
+			<button type="button" class="btn btn-info mx-auto m-2" id="sendButton" name="submit">Submit</button>
 			</div>
 		</form>
 	</div>
