Added style to main page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
   <meta charset="utf-8">
 
-  <title>test</title>
+  <title>Ahmad Audi's Github Repositories</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
-<a href="Pizza-Company">Pizza-Company</a>
+  <div class="container">
+    <div class="projectbox">
+      <h1 class="title">Ahmad Audi's Github Repositories</h1>
+      <div class="project"><a href="Pizza-Company"><img class="projectimage" src="img/pizzacompany.png" alt="pizzacompany"><hr><h2>Pizza-Company</h2></a></div>
+      <div class="project"><a href="Travelplanner"><img class="projectimage" src="img/travelplanner.png" alt="travelplanner"><hr><h2>Travelplanner</h2></a></div>
+    </div>
+  </div>
+
 </body>
 </html>
