--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta charset="utf-8">
 
   <title>Ahmad Audi's Github Repositories</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Ahmad Audi's Github Repositories">
+  <meta name="author" content="Ahmad Audi">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta property="og:title" content="Ahmad Audi's Github Repositories">
+  <meta property="og:description" content="Here can you find all my projects that i have been working on.">
+  <meta property="og:image" content="https://ahmadgbg.github.io/img/bg.jpg">
+  <meta property="og:url" content="https://ahmadgbg.github.io/index.html">
+  <meta name="twitter:title" content="Ahmad Audi's Github Repositories">
+  <meta name="twitter:description" content="Here can you find all my projects that i have been working on.">
+  <meta name="twitter:image" content="https://ahmadgbg.github.io/img/bg.jpg">
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
