fixed page title

--- a/APIGetter/index.html
+++ b/APIGetter/index.html
@@ -4,10 +4,19 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>APIGetter</title>
+  <meta name="description" content="APIGetter - Display API data in a beautiful way">
+  <meta name="author" content="Ahmad Audi">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta property="og:title" content="APIGetter">
+  <meta property="og:description" content="Display API data in a beautiful way">
+  <meta property="og:image" content="https://ahmadgbg.github.io/img/apigetter.jpg">
+  <meta property="og:url" content="https://ahmadgbg.github.io/APIGetter/index.html">
+  <meta name="twitter:title" content="APIGetter">
+  <meta name="twitter:description" content="Display API data in a beautiful way">
+  <meta name="twitter:image" content="https://ahmadgbg.github.io/img/apigetter.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
