fixed page title

--- a/APIGetter/index.html
+++ b/APIGetter/index.html
@@ -10,11 +10,11 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta property="og:title" content="APIGetter">
   <meta property="og:description" content="Display API data in a beautiful way">
-  <meta property="og:image" content="https://ahmadgbg.github.io/img/apigetter.jpg">
+  <meta property="og:image" content="https://ahmadgbg.github.io/img/apigetter.png">
   <meta property="og:url" content="https://ahmadgbg.github.io/APIGetter/index.html">
   <meta name="twitter:title" content="APIGetter">
   <meta name="twitter:description" content="Display API data in a beautiful way">
-  <meta name="twitter:image" content="https://ahmadgbg.github.io/img/apigetter.jpg">
+  <meta name="twitter:image" content="https://ahmadgbg.github.io/img/apigetter.png">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
